sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:7: error: ';' expected but double literal found.
    a = trouveBaseJoueur(i,nbrB).3
                                ^