sort.baseball.SelectBaseball.scala.code
override def run(){
  var nbrB:Int = getBasesAmount();
  var posBABouger:Int = 0;
  var numABouger:Int = 0;
  
  for (i<-0 to nbrB) {
		a = trouveBaseJoueur(i,nbrB).3
    
  }
  
}

def trouveBaseJoueur(base:Int, nbrB:Int):(Int,Int)={
  for (i<-0 to nbrB) {
    if (i!= base) {
      if (getPlayerColor(i,0)==base) {
        return (i,0)
      } 
      else if (getPlayerColor(i,0)==base) {
        return (i,1)
      }
    }
  }
  return (base,0)
}

def deplaceTrou(base:Int){
  pos = getHolePosition();
  for (i<-pos to base-1){
    move(i+1,0);
  }
}